apps = [
	'barber',
	'bdsh',
	'bithenge',
	'blkdump',
	'contacts',
	'corecfg',
	'cpptest',
	'date',
	'devctl',
	'df',
	'dnscfg',
	'dnsres',
	'download',
	'edit',
	'fdisk',
	'fontviewer',
	'getterm',
	'gunzip',
	'hbench',
	'inet',
	'init',
	'kill',
	'killall',
	'kio',
	'loc',
	'logset',
	'lprint',
	'mixerctl',
	'mkbd',
	'mkexfat',
	'mkext4',
	'mkfat',
	'mkmfs',
	'modplay',
	'netecho',
	'nic',
	'nterm',
	'pci',
	'ping',
	'pkg',
	'redir',
	'sbi',
	'sportdmp',
	'stats',
	'sysinfo',
	'sysinst',
	'taskdump',
	'tester',
	'testread',
	'testrunner',
	'testwrit',
	'tetris',
	'tmon',
	'top',
	'trace',
	'untar',
	'usbinfo',
	'vcalc',
	'vdemo',
	'viewer',
	'vlaunch',
	'vol',
	'vterm',
	'vuhid',
	'wavplay',
	'websrv',
	'wifi_supplicant',
]

if CONFIG_BUILD_SHARED_LIBS
	apps += [
		'dltest',
		'dltests',
	]
endif
