#
# SPDX-FileCopyrightText: 2019 Jiří Zárevúcky
#
# SPDX-License-Identifier: BSD-3-Clause
#

apps = [
	'barber',
	'bdsh',
	'bithenge',
	'blkdump',
	'calculator',
	'contacts',
	'corecfg',
	'cpptest',
	'date',
	'devctl',
	'df',
	'dnscfg',
	'dnsres',
	'download',
	'edit',
	'fdisk',
	'fontedit',
	'getterm',
	'gfxdemo',
	'gunzip',
	'hbench',
	'hello',
	'inet',
	'init',
	'kill',
	'killall',
	'kio',
	'launcher',
	'loc',
	'logset',
	'lprint',
	'mixerctl',
	'mkbd',
	'mkexfat',
	'mkext4',
	'mkfat',
	'mkmfs',
	'modplay',
	'nav',
	'netecho',
	'nic',
	'nterm',
	'pci',
	'ping',
	'pkg',
	'redir',
	'sbi',
	'sportdmp',
	'stats',
	'sysinfo',
	'sysinst',
	'taskdump',
	'terminal',
	'tester',
	'testread',
	'testrunner',
	'testwrit',
	'tetris',
	'tmon',
	'top',
	'trace',
	'uidemo',
	'untar',
	'usbinfo',
	'viewer',
	'vol',
	'vuhid',
	'wavplay',
	'websrv',
	'wifi_supplicant',
]

if CONFIG_BUILD_SHARED_LIBS
	apps += [
		'dltest',
		'dltests',
	]
endif
