#
# Copyright (c) 2019 Jiří Zárevúcky
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions
# are met:
#
# - Redistributions of source code must retain the above copyright
#   notice, this list of conditions and the following disclaimer.
# - Redistributions in binary form must reproduce the above copyright
#   notice, this list of conditions and the following disclaimer in the
#   documentation and/or other materials provided with the distribution.
# - The name of the author may not be used to endorse or promote products
#   derived from this software without specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
# IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
# OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
# IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
# INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
# NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
# DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
# THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
# THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
#

apps = [
	'aboutos',
	'barber',
	'bdsh',
	'bithenge',
	'blkdump',
	'calculator',
	'corecfg',
	'cpptest',
	'date',
	'devctl',
	'df',
	'disp',
	'display-cfg',
	'dnscfg',
	'dnsres',
	'download',
	'edit',
	'fdisk',
	'fontedit',
	'getterm',
	'gfxdemo',
	'gunzip',
	'hbench',
	'hello',
	'inet',
	'init',
	'kill',
	'killall',
	'kio',
	'loc',
	'logset',
	'lprint',
	'mixerctl',
	'mkbd',
	'mkexfat',
	'mkext4',
	'mkfat',
	'mkmfs',
	'modplay',
	'nav',
	'netecho',
	'nic',
	'nterm',
	'pcapctl',
	'ofw',
	'pci',
	'ping',
	'pkg',
	'redir',
	'sbi',
	'sportdmp',
	'stats',
	'sysinfo',
	'sysinst',
	'taskbar',
	'taskbar-cfg',
	'taskdump',
	'terminal',
	'tester',
	'testread',
	'testrunner',
	'testwrit',
	'tetris',
	'tmon',
	'top',
	'trace',
	'uidemo',
	'untar',
	'usbinfo',
	'viewer',
	'vol',
	'vuhid',
	'wavplay',
	'websrv',
	'wifi_supplicant',
]

if CONFIG_BUILD_SHARED_LIBS
	apps += [
		'dltest',
		'dltests',
	]
endif
