srvs = [
	'audio/hound',
	'bd/file_bd',
	'bd/rd',
	'bd/sata_bd',
	'bd/vbd',
	'clipboard',
	'devman',
	'fs/cdfs',
	'fs/exfat',
	'fs/ext4fs',
	'fs/fat',
	'fs/locfs',
	'fs/mfs',
	'fs/tmpfs',
	'fs/udf',
	'hid/compositor',
	'hid/console',
	'hid/input',
	'hid/isdv4_tablet',
	'hid/output',
	'hid/remcons',
	'hid/rfb',
	'hid/s3c24xx_ts',
	'hw/char/s3c24xx_uart',
	'klog',
	'loader',
	'locsrv',
	'logger',
	'net/dhcp',
	'net/dnsrsrv',
	'net/ethip',
	'net/inetsrv',
	'net/loopip',
	'net/nconfsrv',
	'net/slip',
	'net/tcp',
	'net/udp',
	'ns',
	'taskmon',
	'test/chardev-test',
	'test/ipc-test',
	'vfs',
	'volsrv',
]
