BUILD = true
POSTBUILD = 'raw'
boot_image_format = 'elf'
POST_OUTPUT = 'image.boot'

boot_src = files(
	'src/asm.S',
	'src/main.c',
	'src/ucb.c',
	'src/putchar.c',
	'../../generic/src/memstr.c',
	'../../generic/src/printf_core.c',
	'../../generic/src/vprintf.c',
	'../../generic/src/printf.c',
	'../../generic/src/str.c',
	'../../generic/src/version.c',
	'../../generic/src/inflate.c',
	'../../generic/src/gzip.c',
	'../../generic/src/tar.c',
	'../../generic/src/kernel.c',
	'../../generic/src/payload.c',
)
