#
# SPDX-FileCopyrightText: 2010 Martin Decky
#
# SPDX-License-Identifier: BSD-3-Clause
#

arch_src += files(
	'src/debug/stacktrace.c',
	'src/proc/scheduler.c',
	'src/proc/task.c',
	'src/proc/thread.c',
	'src/abs32le.c',
	'src/userspace.c',
	'src/smc.c',
	'src/cpu/cpu.c',
	'src/smp/smp.c',
	'src/smp/ipi.c',
	'src/mm/km.c',
	'src/mm/as.c',
	'src/mm/frame.c',
	'src/mm/page.c',
	'src/mm/tlb.c',
)
